--- a/src/app/requete/components/requete-stepper-control/requete-stepper-control.component.html
+++ b/src/app/requete/components/requete-stepper-control/requete-stepper-control.component.html
@@ -6,7 +6,7 @@
   </ng-container>
 
   <ng-container *ngIf="step === 2">
-    <dsfr-button label="Enregistrer Ma Forêt" (click)="save()"></dsfr-button>
+    <dsfr-button label="Enregistrer Ma Forêt" (click)="emitSave()"></dsfr-button>
   </ng-container>
 
   <ng-container *ngIf="step !== 3">
