--- a/src/app/requete/pages/requete-new/requete-new.component.html
+++ b/src/app/requete/pages/requete-new/requete-new.component.html
@@ -1,16 +1,20 @@
-<div *ngIf="breadcrumb" class="fr-container ">
+<div *ngIf="breadcrumb" class="fr-container">
   <app-breadcrumb [breadcrumb]="breadcrumb"></app-breadcrumb>
 </div>
 
 <div class="fr-container">
 
-  <h1>Votre forêt<span *ngIf="forestId"> - {{ forestId }}</span></h1>
+  <h1>
+    Votre forêt
+    @if (foret) {
+      <span> - {{ foret.name }}</span>
+    }
+  </h1>
 
   <app-requete-stepper [step]="step"></app-requete-stepper>
 
   <app-requete-stepper-control [step]="step" (previous)="previousStep()"
-    (next)="nextStep()"></app-requete-stepper-control>
-
+    (next)="nextStep()" (save)="saveForet()"></app-requete-stepper-control>
 
   <div *ngIf="step === 0 || step === 1" class="fr-grid-row fr-mb-4v">
     <div class="fr-col-12 fr-col-lg-6">
