feat(ThematicModule): revue de code - simplification thematicComponents

--- a/src/app/requete/pages/requete-new/requete-new.component.html
+++ b/src/app/requete/pages/requete-new/requete-new.component.html
@@ -6,7 +6,7 @@
 
   <h1>
     Votre forêt
-    @if (foret) {
+    @if (foret && foret.name) {
       <span> - {{ foret.name }}</span>
     }
   </h1>
