--- a/src/app/shared-reglementation/components/reglementation-view/reglementation-view.component.html
+++ b/src/app/shared-reglementation/components/reglementation-view/reglementation-view.component.html
@@ -3,7 +3,7 @@
 <div [innerHTML]="reglementation.impactReglementaire"></div>
 <div [innerHTML]="reglementation.impactProcedure"></div>
 <p>
-  <a [href]="reglementation.referenceUrl">Accès référence réglementaire</a>
+  <a [href]="reglementation.referenceUrl" target="_blank">Accès référence réglementaire</a>
 </p>
 <p>
   Point de concat {{ reglementation.contact }}.
