feat(shared-reglementation) : affichage de la reglementation en fonction des couches / feat(shared-thematic) : séparation de 'parcs nationaux' en deux couches 'Coeurs de parcs nationaux' et 'Zone d'adhésion' / supression de la fonction 'filterFeature' dans 'fiche-info-feature-service' car le filtrage est fait dans la requête avec les cql filters

--- a/src/app/shared-reglementation/components/reglementation-view/reglementation-view.component.html
+++ b/src/app/shared-reglementation/components/reglementation-view/reglementation-view.component.html
@@ -2,12 +2,16 @@
 <div [innerHTML]="reglementation.description"></div>
 <div [innerHTML]="reglementation.impactReglementaire"></div>
 <div [innerHTML]="reglementation.impactProcedure"></div>
-<p>
-  <a [href]="reglementation.referenceUrl">Accès référence réglementaire</a>
-</p>
-<p>
-  Point de concat {{ reglementation.contact }}.
-</p>
+  @if(reglementation.referenceUrl){
+    <p>
+      <a [href]="reglementation.referenceUrl">Accès référence réglementaire</a>
+    </p>
+  }
+  @if(reglementation.contact) {
+    <p>
+      Point de contact : {{ reglementation.contact }}.
+    </p>
+  }
 } @else {
 <p>Aucune reglementation ou recommandation.</p>
 }
