feat(shared-thematic) : ajout d'un texte quand aucun élément intersecté dans une ou plusieurs thématique - ajout d'une ébauche de synthèse

--- a/src/app/shared-thematic/components/thematic-list/thematic-list.component.html
+++ b/src/app/shared-thematic/components/thematic-list/thematic-list.component.html
@@ -2,7 +2,7 @@
   @if (thematic.active) {
     <div>
       @if (first) {
-        <app-synthese></app-synthese>
+        <app-synthese [features]="responseFeatures"></app-synthese>
       } @else {
         <app-thematic-view [thematic]="thematic"></app-thematic-view>
       }
