fix(shared-thematic) : petit fix pour passer les test

--- a/src/app/shared-thematic/components/synthese/synthese.component.html
+++ b/src/app/shared-thematic/components/synthese/synthese.component.html
@@ -1,4 +1,4 @@
-@if(!thematicTabs[1].hasFeature && !thematicTabs[2].hasFeature) {
+@if(thematicTabs && !thematicTabs[1].hasFeature && !thematicTabs[2].hasFeature) {
   <p>Pour le périmètre saisi, aucun zonage à caractère environnemental ou patrimonial n'a été identifié parmi ceux intégrés à l'outil FOREG :</p>
   <ul>
     <li>les aires protégées en faveur de la protection de l'environnement et de la préservation de la biodiversité</li>
