--- a/src/app/shared-reglementation/components/contact-view/contact-view.component.html
+++ b/src/app/shared-reglementation/components/contact-view/contact-view.component.html
@@ -1,7 +1,7 @@
 @if (contacts) {
-  <b>Contacts :</b>
+  <p><b>Contacts :</b></p>
   @for(contact of contacts; track $index){
-    <p>{{contact.name}}</p>
+    <p><b>{{contact.name}}</b></p>
   <ul>
     <li>Adresse : {{contact.address}}</li>
     <li>Site internet : <a href = {{contact.website}} target = '_blank'>{{contact.website}}</a></li>
@@ -13,6 +13,7 @@
     }
     <li>Téléphone : {{contact.tel}}</li>
   </ul>
+  <br>
   }
 } 
 
