feat(SharedReglementation): revue de code sur annuaire public

--- a/src/app/shared-reglementation/components/contact-view/contact-view.component.html
+++ b/src/app/shared-reglementation/components/contact-view/contact-view.component.html
@@ -11,7 +11,7 @@
     @if(contact.contactForm) {
       <li>Formulaire de contact : <a href = {{contact.contactForm}} target = '_blank'>{{contact.contactForm}}</a></li>
     }
-    <li>Téléphone : {{contact.tel}}</li>
+    <li>Téléphone : {{contact.telephone}}</li>
   </ul>
   <br>
   }
