--- a/src/app/pages/mes-forets/mes-forets.component.html
+++ b/src/app/pages/mes-forets/mes-forets.component.html
@@ -4,16 +4,16 @@
 
 <div class="fr-container fr-mb-8v">
 
-  <h1>Mes Forets</h1>
+  <h1>Mes Forêts</h1>
 
   @if (subcribed) {
-  <p>Liste des forêts sauvegardé sur votre compte <i>carte.gouv.fr</i></p>
+  <p>Liste des forêts sauvegardés sur votre compte <i>carte.gouv.fr</i></p>
   } @else {
   <p>
     Liste des forêts sauvegardé sur le cache de votre navigateur.
     Charger et enregistrer vos forêts sur votre compte
     <a [href]="loginUrl" target="_blank">carte.gouv.fr</a>
-    pour les retrouver sur d'autre postes.
+    pour les retrouver sur d'autres postes.
   </p>
   }
 
