--- a/src/app/shared-map/components/geolocalise-form/geolocalise-form.component.html
+++ b/src/app/shared-map/components/geolocalise-form/geolocalise-form.component.html
@@ -1,4 +1,4 @@
 <div id="location" #searchControlGroup>
-  <label class="fr-label">Saisissez une commune, un lieu-dit</label>
-  <span class="fr-hint-text">Commune, lieu-dit, adresse, ...</span>
+  <label class="fr-label">Localisez votre forêt</label>
+  <span class="fr-hint-text">Saisissez une commune, une adresse</span>
 </div>
