feat(App): ajout de la notice d'information et suppresion acces login pour l'instant

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,14 @@
   {{ title }}
 </p>
 
-<header id="header-navigation" tabindex="-1">
+<div id="header-navigation" tabindex="-1">
   <app-header></app-header>
-</header>
+</div>
 
 <main id="content" tabindex="-1">
   <router-outlet></router-outlet>
 </main>
 
-<footer id="footer" tabindex="-1" class="fr-mt-16v">
+<div id="footer" tabindex="-1" class="fr-mt-16v">
   <app-footer></app-footer>
-</footer>
+</div>
