--- a/src/app/requete/pages/requete-new/requete-new.component.html
+++ b/src/app/requete/pages/requete-new/requete-new.component.html
@@ -24,7 +24,7 @@
 
   <div class="fr-grid-row fr-grid-row--gutters">
 
-    <div class="fr-col-12 fr-col-lg-6" [class.fr-col-lg-12]="step === 0">
+    <div class="fr-col-12" [class.fr-col-lg-12]="step === 0" [class.fr-col-lg-6]="step !== 0">
       @if (step === 0) {
         <p class="fr-label">Dessiner, sur la carte ci-dessous, le périmètre de la forêt ou des parcelles à l'aide de l'outil de dessin (polygon)</p>
         <p class="fr-hint-text">Changer de fond de carte (PLAN IGN / ORTHOPHOTOS) avec l'outil de sélection de couche</p>
