--- a/src/app/shared-thematic/components/thematic-tabs/thematic-tabs.component.html
+++ b/src/app/shared-thematic/components/thematic-tabs/thematic-tabs.component.html
@@ -1,5 +1,5 @@
 @if (thematics && thematics.length > 0) {
-  <dsfr-tabs [selectedTabIndex]="selectedTabIndex">
+  <dsfr-tabs [selectedTabIndex]="selectedTabIndex" (tabSelect)="updateMap($event)">
 
     @for (thematic of thematics; track $index; let first = $first) {
       @if (thematic.active) {
