--- a/src/app/requete/pages/requete-new/requete-new.component.html
+++ b/src/app/requete/pages/requete-new/requete-new.component.html
@@ -13,7 +13,7 @@
 
   <app-requete-stepper [step]="step"></app-requete-stepper>
 
-<div class="fr-grid-row fr-grid-row--gutters fr-mb-4v">
+<div *ngIf="step == 0 "class="fr-grid-row fr-grid-row--gutters fr-mb-4v">
   <div class="fr-col-12 fr-col-lg-4">
     <app-geolocalise-form (select)="confirmSelect()"></app-geolocalise-form>
   </div>
@@ -54,7 +54,7 @@
 
     <div class="fr-col-12" [class.fr-col-lg-12]="step === 0" [class.fr-col-lg-6]="step !== 0">
       @if (step === 0) {
-        <p class="fr-label">Définissez le périmètre de votre forêt en important un contour ou à l'aide des outils de dessin sur la carte</p>
+        <p class="fr-label">Définissez le périmètre de votre forêt en sélectionnant une ou plusieurs parcelles cadastrales, en important un contour ou à l'aide des outils de dessin sur la carte</p>
         <p class="fr-hint-text">Changer de fond de carte (PLAN IGN / ORTHOPHOTOS) avec l'outil de sélection de couche</p>
       }
       <app-map-viewer></app-map-viewer>
