--- a/src/app/requete/pages/requete-new/requete-new.component.html
+++ b/src/app/requete/pages/requete-new/requete-new.component.html
@@ -54,7 +54,7 @@
 
     <div class="fr-col-12" [class.fr-col-lg-12]="step === 0" [class.fr-col-lg-6]="step !== 0">
       @if (step === 0) {
-        <p class="fr-label">Définissez le périmètre de votre forêt en sélectionnant une ou plusieurs parcelles cadastrales, en important un contour ou à l'aide des outils de dessin sur la carte</p>
+        <p class="fr-label">Définissez le périmètre de votre forêt en sélectionnant une ou plusieurs parcelles cadastrales (zoomer pour faire apparaître les parcelles et choisir "P" dans la barre d'outils), en important un contour ou à l'aide des outils de dessin sur la carte.</p>
         <p class="fr-hint-text">Changer de fond de carte (PLAN IGN / ORTHOPHOTOS) avec l'outil de sélection de couche</p>
       }
       <app-map-viewer></app-map-viewer>
