--- a/src/app/requete/components/requete-stepper-control/requete-stepper-control.component.html
+++ b/src/app/requete/components/requete-stepper-control/requete-stepper-control.component.html
@@ -10,4 +10,10 @@
       [disabled]="step > 2"></dsfr-button>
   </ng-container>
 
+  <ng-container *ngIf="step == 1">
+    <a class="avis-btn" href="https://jedonnemonavis.numerique.gouv.fr/Demarches/3598?button=3885" target='_blank' title="Je donne mon avis - nouvelle fenêtre">
+      <img src="https://jedonnemonavis.numerique.gouv.fr/static/bouton-bleu-clair.svg" alt="Je donne mon avis" />
+    </a>
+  </ng-container>
+
 </dsfr-buttons-group>
