on n'affiche pas la couche hydro dans la carte/on n'affiche pas la liste des objets hydro intersectés dans l'onglet 'Autres'

--- a/src/app/shared-thematic/components/layer-fiche-view/layer-fiche-view.component.html
+++ b/src/app/shared-thematic/components/layer-fiche-view/layer-fiche-view.component.html
@@ -6,6 +6,7 @@
 <app-map-viewer [id]="map" [situationMap]="displaySituationMap"></app-map-viewer>
 }
 
+@if(layer.id != 'troncons_hydrographiques') {
   <ul>
     @for (feature of layer.features; track feature) {
     <li>
@@ -17,6 +18,7 @@
     </li>
     }
   </ul>
+}
 
 <app-reglementation-view [layerReference]="layer.title"></app-reglementation-view>
 
