suppression de la troisième étape du stepper qui ne se justifie pas pour l'instant/amélioration de la gestion de l'export PDF

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,18 @@
   <app-header></app-header>
 </div>
 
+<div id="header-print">
+  <app-header-print></app-header-print>
+</div>
+
 <main id="content" tabindex="-1">
   <router-outlet></router-outlet>
 </main>
 
 <div id="footer" tabindex="-1" class="fr-mt-16v">
   <app-footer></app-footer>
+</div>
+
+<div id="footer-print">
+  <app-footer-print></app-footer-print>
 </div>
