--- a/src/app/requete/components/requete-stepper-control/requete-stepper-control.component.html
+++ b/src/app/requete/components/requete-stepper-control/requete-stepper-control.component.html
@@ -5,12 +5,14 @@
       (click)="emitPrevious()" [disabled]="step < 1"></dsfr-button>
   </ng-container>
 
-  <ng-container *ngIf="step !== 2">
+  <ng-container *ngIf="step !== 1">
     <dsfr-button [label]="nextButtonLabel" icon="fr-icon-arrow-right-fill" (click)="emitNext()"
       [disabled]="step > 2"></dsfr-button>
   </ng-container>
 
   <ng-container *ngIf="step == 1">
+    <dsfr-button [label]="nextButtonLabel" (click)="emitPrint()"
+    ></dsfr-button>
     <a class="avis-btn" href="https://jedonnemonavis.numerique.gouv.fr/Demarches/3598?button=3885" target='_blank' title="Je donne mon avis - nouvelle fenêtre">
       <img src="https://jedonnemonavis.numerique.gouv.fr/static/bouton-bleu-clair.svg" alt="Je donne mon avis" />
     </a>
